force-app/main/default/objects/Food_Production__c/Food_Production__c.object-meta.xml
<CustomObject>
    <description>Individual submission by species, stating quantity and price</description>
    <label>Food Production</label>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>Food Production Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Food Production</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>