force-app/main/default/objects/Food_Production__c/fields/Attention_Details__c.field-meta.xml
<CustomField>
    <fullName>Attention_Details__c</fullName>
    <label>Attention Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>