force-app/main/default/objects/Food_Production__c/fields/Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Price__c</fullName>
    <label>Average Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>