force-app/main/default/objects/Food_Production__c/fields/Fingerlings_Eggs_Species__c.field-meta.xml
<CustomField>
    <fullName>Fingerlings_Eggs_Species__c</fullName>
    <label>Fingerlings / Eggs Species</label>
    <length>255</length>
    <type>Text</type>
</CustomField>