force-app/main/default/objects/Food_Production__c/fields/Food_Production_Submission__c.field-meta.xml
<CustomField>
    <fullName>Food_Production_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Food Production Submission</label>
    <referenceTo>Food_Production_Submission__c</referenceTo>
    <relationshipLabel>Food Production</relationshipLabel>
    <relationshipName>Food_Production</relationshipName>
    <type>Lookup</type>
</CustomField>