force-app/main/default/objects/Food_Production__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <description>Convert Data Entry to actual date</description>
    <formula>DATE( VALUE(Food_Production_Submission__r.Year_of_Sale__c),VALUE( CASE(Food_Production_Submission__r.Sale_Period__c , &apos;q1&apos;, &apos;1&apos;, &apos;q2&apos;, &apos;4&apos;,&apos;q3&apos;,&apos;7&apos;, &apos;10&apos;) ),1)</formula>
    <label>Reporting Period</label>
    <type>Date</type>
</CustomField>