force-app/main/default/objects/Food_Production__c/fields/Species_of_Fish__c.field-meta.xml
<CustomField>
    <fullName>Species_of_Fish__c</fullName>
    <label>Species of Fish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asian Seabass 金目鲈</fullName>
            </value>
            <value>
                <fullName>Black-Spotted Grouper 黑点斑</fullName>
            </value>
            <value>
                <fullName>Flower Crab 花蟹</fullName>
            </value>
            <value>
                <fullName>Giant Grouper 龙胆</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>