force-app/main/default/objects/Food_Production__c/fields/Transhipped__c.field-meta.xml
<CustomField>
    <fullName>Transhipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transhipped?</label>
    <type>Checkbox</type>
</CustomField>