force-app/main/default/objects/Food_Production__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pc</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>