force-app/main/default/objects/Food_Production__c/recordTypes/Fish_Farm.recordType-meta.xml
<RecordType>
    <fullName>Fish_Farm</fullName>
    <active>true</active>
    <description>Fish Production Data</description>
    <label>Fish Farm</label>
</RecordType>