force-app/main/default/objects/Food_Production__c/recordTypes/Fish_Hatchery.recordType-meta.xml
<RecordType>
    <fullName>Fish_Hatchery</fullName>
    <active>true</active>
    <description>Fish Hatchery Production Data</description>
    <label>Fish Hatchery</label>
</RecordType>