force-app/main/default/objects/Food_Production__c/recordTypes/Vegetables_Production.recordType-meta.xml
<RecordType>
    <fullName>Vegetables_Production</fullName>
    <active>true</active>
    <label>Vegetables Production</label>
</RecordType>