force-app/main/default/objects/Food_Production__c/listViews/Food_Production_Entries_That_Req_Att.listView-meta.xml
<ListView>
    <fullName>Food_Production_Entries_That_Req_Att</fullName>
    <columns>NAME</columns>
    <columns>Species_of_Fish__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <columns>Quantity__c</columns>
    <columns>Average_Price__c</columns>
    <columns>Transhipped__c</columns>
    <columns>Food_Production_Submission__c</columns>
    <columns>Attention_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attention_Details__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Food Production Entries That Req Att</label>
</ListView>